# test

./: README.md  devenv.nix  devenv.yaml  main.md  pyproject.toml
.github/workflows/: release.yml
rsc/docker/: entrypoint.sh
